doing, doing, doing bedrock parser